# torah-analysis

./: pyproject.toml
.ipynb_checkpoints/: analysis-checkpoint.ipynb
